# CausalBootstrapping

./: MANIFEST.in  README.md  pyproject.toml  setup.py
CausalBootstrapping/: algorithms.py  causalBootstrapping.py  distEst_lib.py  idfixtree.py  setup.py
CausalBootstrapping/CausalBootstrapping.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
CausalBootstrapping/Tutorials/: Tutorial1-Backdoor.ipynb  Tutorial2-Frontdoor.ipynb  Tutorial3-General.ipynb
CausalBootstrapping/Tutorials/.ipynb_checkpoints/: Tutorial2-Frontdoor-checkpoint.ipynb  Tutorial3-General-checkpoint.ipynb
CausalBootstrapping/causalbootstrapping/: distEst_lib.py  requirements.txt
CausalBootstrapping/test_data/backdoor_contY_contX_contU/: U_test.csv  U_train.csv  X_test.csv  X_train.csv  Y_test.csv  Y_train.csv
CausalBootstrapping/test_data/complex_scenario/: U_test_conf.csv  U_train.csv  X_test.csv  Y_test.csv  (+3 more)
CausalBootstrapping/test_scr/: unit_tests.py
Tutorials/: Tutorial1-Backdoor.ipynb  Tutorial2-Frontdoor.ipynb  Tutorial3-General.ipynb
Tutorials/.ipynb_checkpoints/: Tutorial1-Backdoor-checkpoint.ipynb  Tutorial2-Frontdoor-checkpoint.ipynb
causalbootstrapping/: backend.py  cb_type_defs.py  distEst_lib.py  expr.py  expr_extend.py  utils.py  workflows.py
test_data/backdoor_contY_contX_contU/: U_test.csv  U_train.csv  X_test.csv  X_train.csv
test_data/complex_scenario/: U_test.csv  W_test.csv  W_test_conf.csv  W_train.csv  X_train.csv  Y_test_conf.csv  Z_test_conf.csv  Z_train.csv
test_data/frontdoor_discY_contZ_contX_discU/: Y_train.csv
test_scr/: unit_tests.py
(+7 files in other folders)
